# plate-bot

./: .env.example  .gitignore  Dockerfile  Product Requirements Document.txt  README.md  System Design Document.txt  Technical Specification.txt  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  bootstrap.py  main.py
app/application/: __init__.py  dto.py
app/application/services/: __init__.py  admin.py  auction.py  balance.py  maintenance.py  marketplace.py  navigation.py
app/config/: __init__.py  settings.py
app/domain/: __init__.py  countries.py  enums.py  errors.py  policies.py  validators.py
app/infrastructure/: __init__.py  storage.py
app/infrastructure/db/: __init__.py  models.py  session.py
app/infrastructure/repositories/: __init__.py  marketplace.py
app/presentation/: __init__.py  handlers.py  keyboards.py  middleware.py  rendering.py  states.py  webhook.py
app/tasks/: __init__.py  scheduler.py
app/utils/: logging.py
docs/: ARCHITECTURE.md  ER.md
migrations/: env.py
migrations/versions/: 20260713_0001_initial_schema.py  20260715_0002_app_media.py  20260715_0003_user_primary_plate.py
tests/: __init__.py  conftest.py  test_balance_book.py  test_marketplace_integration.py  test_navigation.py  test_primary_plate_integration.py  test_repositories_integration.py  test_settings.py  test_validators.py
