[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "cpm2-plates-market"
version = "1.0.0"
description = "Transactional Telegram marketplace for CPM2 digital plate assets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram>=3.17,<4",
  "SQLAlchemy>=2.0.36,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.14,<2",
  "redis>=5.2,<6",
  "APScheduler>=3.10,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "structlog>=24.4,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires a disposable PostgreSQL database supplied through TEST_DATABASE_URL",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["migrations"]
